# argus-lens

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.gpu-base  Dockerfile.standalone  Makefile  README.md  build-docker.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
eval/: README.md  golden.example.jsonl
src/argus_lens/: __init__.py  _version.py  cli.py  engine.py  openai_compat.py  provenance.py  registry.py  retry.py  server.py  taxonomy.py  types.py
src/argus_lens/assembly/: __init__.py  classifier.py  composer.py  filtering.py  noise.py  profiles.py  token_budget.py  training.py  variants.py  zeroshot.py
src/argus_lens/backends/: __init__.py  base.py  blip2.py  florence2.py  hf_inference.py  hybrid.py  nvidia_nim.py  openai.py  openai_compat.py  output.py  ram.py  replay.py  replicate.py  wd14.py
src/argus_lens/connectors/: __init__.py  base.py  filesystem.py  immich.py  xmp.py
src/argus_lens/eval/: __init__.py  dataset.py  metrics.py  report.py  runner.py
src/argus_lens/exporters/: __init__.py  csv_export.py  json_export.py  text.py
src/argus_lens/gpu/: __init__.py  capacity.py  coordinator.py
src/argus_lens/reconcile/: __init__.py  color_sample.py  detect.py  questions.py  reconciler.py  rewrite.py  types.py
src/argus_lens/reconcile/verifiers/: __init__.py  florence.py  molmo.py  openai_compat.py  tag_prior.py
tests/: __init__.py  conftest.py  test_assembly.py  test_backend_output.py  test_backends_smoke.py  test_connectors.py  test_device_contract.py  test_engine_device_oom.py  test_eval.py  test_folder_endpoints.py  test_gpu.py  test_immich_connector.py  test_immich_endpoints.py  test_manifest_endpoint.py  test_meta_endpoints.py  test_openai_compat.py  test_profiles.py  test_provenance.py  test_ram_backend.py  test_reconcile.py  test_replay_backend.py  test_taxonomy.py  test_url_loading.py  test_wd14_tagging.py
