[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "argus-lens"
dynamic = ["version"]
description = "Intent-aware, multi-model captioning pipeline for LoRA training, dataset curation, and generative AI workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "smk762" }]
keywords = [
    "captioning", "image", "lora", "training", "diffusion",
    "florence", "wd14", "blip", "dataset", "structured-captions",
    "stable-diffusion", "flux", "sdxl", "annotation", "tagging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]
dependencies = [
    "Pillow>=10.0",
    "structlog>=24.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
wd14 = ["onnxruntime>=1.16", "numpy>=1.24"]
wd14-gpu = ["onnxruntime-gpu>=1.16", "numpy>=1.24"]
torch = ["torch>=2.1", "transformers>=4.46"]
local = ["onnxruntime>=1.16", "numpy>=1.24", "torch>=2.1", "transformers>=4.46"]
openai = ["openai>=1.30"]
replicate = ["replicate>=0.25"]
cli = ["typer>=0.12", "rich>=13.0"]
server = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.7"]
all = [
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "torch>=2.1",
    "transformers>=4.46",
    "openai>=1.30",
    "replicate>=0.25",
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff==0.15.16", "interrogate>=1.7"]

[project.scripts]
argus-lens = "argus_lens.cli:app"

[project.urls]
Repository = "https://github.com/smk762/argus-lens"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/argus_lens/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_lens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.interrogate]
fail-under = 80
exclude = ["src/argus_lens/_version.py"]
verbose = 1

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["src/argus_lens/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]
